# abm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COHORT_FIX_VERIFICATION.md  COHORT_MISMATCH_ANALYSIS.md  CRITICAL_DIAGNOSTIC.md  Cargo.toml  EXP3_ANALYSIS_RESULTS.md  EXPERIMENTAL_VALIDATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  README.md  ROOT_CAUSE_ANALYSIS.md  STATS_IMPLEMENTATION.md  TESTING_EXPLORATION_SUMMARY.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_STRATEGY.md  TESTING_VIA_STATS.md  TESTING_VIA_STATS_SUMMARY.md  VAR_CALIBRATION_PLAN.md  VAR_EM_FIX.md  analyze_calibration.sh  analyze_exp3.py  analyze_exp4.py  analyze_exp5.py  analyze_exp6_exp7.py
evolution_coop/: Cargo.toml
evolution_coop/src/: kinship.rs  lib.rs  main.rs
insurance_cycles/: Cargo.toml  EXPERIMENTS.md  README.md  REVIEW.md
insurance_cycles/analysis/: README.md  anomaly_detection.py  cycle_analysis.py  market_structure.py  parameter_sensitivity.py  requirements.txt
insurance_cycles/experiments/: baseline_validation.toml  beta_sensitivity.toml  credibility_sweep.toml  distance_cost_sweep.toml  leverage_sensitivity.toml  test_quick.toml
insurance_cycles/src/: claim_generator.rs  helpers.rs  insurer.rs  lib.rs  main.rs  market_coordinator.rs  output.rs
lloyds_insurance/: Cargo.toml  EXPERIMENTS.md  EXPERIMENT_PLAN.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_REVIEW.md  PRICING_FIX_RESULTS.md  PRICING_INSTABILITY_DIAGNOSIS.md  README.md  README_PLOTS.md  REVIEW.md  REVIEW_AND_PROPOSED_CHANGES.md  REVIEW_WITH_DIAGRAMS.md  SESSION_SUMMARY.md  plot_fix_comparison.py  plot_paper_figures.py
(+384 files in other folders)
