[package]
name = "insurance_cycles"
version = "0.1.0"
edition = "2021"

[features]
integration-tests = []

[dependencies]
des = { path = "../des" }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"
chrono = "0.4"
rayon = "1.10"
