[package]
name = "lloyds_insurance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lloyds_insurance"
path = "src/main.rs"

[dependencies]
des = { path = "../des" }
rand = "0.8"
rand_distr = "0.4"

[features]
# Enable long-running integration tests (50-year simulations)
# Run with: cargo test --features long-tests
long-tests = []
